--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.0.4",
+    "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
