--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.9.1",
     "fs": "0.0.2",
     "gulp-cache": "^0.2.10",
+    "gulp-clean": "^0.3.1",
     "gulp-imagemin": "^2.3.0",
     "gulp-jshint": "^1.11.2",
     "gulp-load-plugins": "^1.0.0-rc.1",
