--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
-    "gulp.spritesmith": "^4.0.0"
+    "gulp.spritesmith": "^4.0.0",
+    "merge-stream": "^1.0.0",
+    "run-sequence": "^1.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
