--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.0.4",
+    "gulp-sequence": "^0.4.1",
     "gulp-sftp": "^0.1.5",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-usemin": "^0.3.14",
     "gulp.spritesmith": "^4.0.0",
-    "merge-stream": "^1.0.0",
-    "run-sequence": "^1.1.4"
+    "image-size": "^0.3.5",
+    "merge-stream": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
